add sction sobre

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <a id="logo" href="#home"><i class="fa-solid fa-magnifying-glass"></i><h4>GPHLSA-GAP</h4></a>
         <ul class="nav_menu">
           <li><a href="#home">Home</a></li>
-          <li><a href="">Artigos</a></li>
+          <li><a href="#sobre">Sobre</a></li>
           <li><a href="">Eventos</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="">Contato</a></li>
         </ul>
         <button class="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
         <button class="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
@@ -34,7 +34,7 @@
    </nav>
 
   <header id="home">
-    <h1>Grupo De Pesquisa Histórica Luiz Sávio De Almeida</h1>
+    <h1>Grupo De Pesquisa Histórica e Interdisciplinar Luiz Sávio De Almeida</h1>
     <p>
       Um projeto revolucionário, um trabalho nunca visto antes 
       nas escolas publicas das periferias de Maceió. Produzindo 
@@ -44,8 +44,92 @@
    </header>
 
    <main>
-      <section class="container"> 
-         <div class="la"></div>
+      <section id="sobre" class="container"> 
+        <h2>A PESQUISA CIENTÍFICA NO ENSINO BÁSICO DE ALAGOAS:
+          O GRUPO DE PESQUISA HISTÓRICA E INTERDISCIPLINAR
+          LUIZ SÁVIO DE ALMEIDA – GAP
+        </h2>
+
+        <div class="sobre-text-img">
+          <figure>
+           <img src="./img/profhistoria.jpeg" alt="Professor willames Santana lider do projeto">
+           <figcaption>Willames Santana mentor e idealizador do projeto.</figcaption>  
+          </figure>
+          <p>
+            A Educação é uma ação coletiva que requer o uso de vários
+            recursos didático-metodológicos para alcançar um ensino significativo e
+            realmente apreendido. No entanto, as Escolas Públicas de modo geral
+            padecem de problemas crônicos de infraestrutura e falta de
+            investimentos públicos. Conhecendo a realidade atual da <strong>Escola
+            Estadual Professora Guiomar de Almeida Peixoto</strong> (EEPGAP), o
+            professor de História <strong>Willames de
+            Santana Santos</strong> ousou ao idealizar e
+            materializar um Projeto de Pesquisa
+            para o Ensino Básico que se pretende
+            mudar todo o cotidiano escolar e criar
+            uma <strong>Cultura Pesquisadora
+            Estudantil</strong> na Unidade de Ensino em
+            que trabalha. 
+            Da mesma maneira que outras
+            Escolas Públicas Estaduais e
+            Municipais do Brasil afora, a Escola
+            Guiomar de Almeida Peixoto sofre
+            com a falta de recursos fundamentais
+            para a rotina do ensinoaprendizagem. Falta quase tudo:
+            livros didáticos, laboratórios de
+            pesquisas, quadra poliesportiva,
+            salas climatizadas, refeição para os
+            alunos do Integral e até água. A
+            despeito dessa situação caótica, a vontade de investir no protagonismo
+            estudantil e driblar as adversidades do cotidiano escolar não desanimou
+            o professor de História radicado em Alagoas . Pelo contrário, o professor
+            Willames propôs outra abordagem viável de ensino -aprendizagem
+            através da <strong>Prática de Pesquisa Científica</strong> e fundou o Grupo de
+            Pesquisa Histórica Luiz Sávio de Almeida-GAP. 
+            Fundado em 13 de junho de 2022 para alunos e alunas do Ensino
+            Fundamental e do Ensino Médio da Escola Estadual Professora Guiomar
+            de Almeida Peixoto, vulgo GAP, o <strong>Grupo de Pesquisa Histórica Luiz
+            Sávio de Almeida</strong> tinha como objetivo primário pesquisar surtos
+            epidêmicos de doenças infecciosas e contagiosas em Alagoas – como a
+            cólera, a varíola e a febre amarela. O horizonte era a criação de uma
+            Revista Digital, de publicação anual, que reuniria os melhores trabalhos
+            científicos desenvolvidos pelos <strong>Alunos-Pesquisadores</strong> durante o ano
+            de pesquisas. 
+          </p>
+        </div>
+
+        <div class="sobre-text-img float">
+          <figure>
+            <img src="./img/caparevista.png" alt="Desenho original que foi a capa da primeira edição da revista Documento Históricos">
+            <figcaption>Desenho original que foi a capa da primeira edição da revista Documento Histórico</figcaption>
+          </figure>
+           <p>
+          <strong>O resultado da ação</strong> ultrapassou os objetivos iniciais e o Grupo
+           de Pesquisa teve que expandir, deixou de ser um grupo exclusivo de
+           História e tornou-se Interdisciplinar. A consequência prática foi a
+           execução de vários eventos de caráter dinâmico que buscaram
+           proporcionar situações de aprendizagem para toda Unidade de Ensino,
+           garantindo protagonismo estudantil e vários movimentos
+           socioeducativos. O Grupo Científico passou então a ser chamado Grupo
+           de Pesquisa Histórica e Interdisciplinar Luiz Sávio de Almeida -GAP, ou
+           Grupo Científico PHILSA – como é chamado pelos AlunosPesquisadores. 
+           Com metodologia de pesquisas e transcrições de documentos
+           históricos, digitais e manuscritos, o Grupo Científico PHILSA intenciona
+           promover um ensino transversal e interdisciplinar, problematizando
+           pesquisas de História Local e Saúde Pública para promover
+           aprendizagem significativa através da Prática de Pesquisa de análises
+           da cultura alagoana. E, ao mesmo tempo, possibilitar um ensino
+           histórico-crítico oportunizando crescimento intelectual aos integrantes. 
+           Para promover protagonismo estudantil, o Grupo Científico
+           PHILSA idealizou e realizou um <strong>Concurso de Desenho</strong> com o propósito
+           de escolher a Capa da sua Revista Digital, ainda sem nome definido, e
+           toda sua identidade visual – para fomentar e ostentar as habilidades
+           artísticas dos alunos Guiomar em seu periódico. Como pretendia-se
+           sociabilizar dois DOCUMENTOS HISTÓRICOS INÉDITOS pesquisados
+           por nossos Alunos -Pesquisadores, batizamos nosso periódico de
+          <strong>Revista Digital DOCUMENTO HISTÓRICO</strong>
+         </p>
+        </div>
       </section>
    </main>
    
