alteração no sobre

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
          </p>
         </div>
       </section>
+
+      <section id="eventos" class="container">
+        <h2>Eventos</h2>
+      </section>
    </main>
    
    <script src="./script.js"></script>
