--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="nav_menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
-          <li><a href="">Eventos</a></li>
+          <li><a href="#eventos">Eventos</a></li>
           <li><a href="">Contato</a></li>
         </ul>
         <button class="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
@@ -134,6 +134,83 @@
 
       <section id="eventos" class="container">
         <h2>Eventos</h2>
+       <div class="boxes-eventos">
+        <div class="box-evento">
+          <img src="./img/concursodedesenho.jpeg" alt="Concurso de desenho">
+          <h3>CONCURSO DE DESENHO "CAROLINA, A MULHER DA CAPA PRETA"</h3>
+          <p>
+            Em agosto de 2022, o Concurso de Desenho "Carolina, a mulher da 
+            capa preta" foi realizado com a colaboração do Grêmio Estudantil 
+            TecnoGAP. Treze artistas do Ensino Fundamental e Médio submeteram 
+            seus desenhos, avaliados com base na qualidade artística e fidelidade 
+            à lenda urbana. Eduardo da Silva Ritir venceu o concurso, destacando-se 
+            por sua representação detalhada do túmulo de Carolina e da arquitetura 
+            neogótica da Capela do Cemitério N. S. da Piedade. Ele expressou a 
+            surpresa ao descobrir o talento artístico na Escola Guiomar, onde estudou. 
+            O Grupo Científico PHILSA então assumiu o desafio de criar algo novo.</p>
+        </div>
+
+        <div class="box-evento">
+          <img src="./img/capadarevistadigital.png" alt="">
+          <h3>A 1ª EDIÇÃO DA REVISTA DIGITAL DOCUMENTO
+            HISTÓRICO</h3>
+          <p>   
+            Após um ano de pesquisa em 2022, o Grupo de Pesquisa 
+            selecionou mais de 50 trabalhos de protagonismo estudantil 
+            para a 1ª Edição da Revista Digital DOCUMENTO HISTÓRICO, 
+            abordando diversos campos, como História, História Local, 
+            Geografia, Matemática, Ciências Biológicas, Artes e Literatura. 
+            O foco foi na cultura funerária do século XIX, incluindo o 
+            Regulamento do Cemitério Público de Maceió e a lenda urbana 
+            "Carolina, a mulher da capa preta," explorando as consequências 
+            da pandemia de cólera de 1855-56 nas tradições funerárias brasileiras da época.
+            A revista foi lançada em janeiro de 2023 no Instagram... 
+          </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="https://i.imgur.com/A6uRBYF.png" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <h3>RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO</h3>
+          <p> 
+            Durante a 10ª Bienal Internacional do Livro de Alagoas em 2023, foi 
+            relançado o Dossiê "Febre Amarela, Cemitérios Públicos de Maceió & 
+            Projetos Educacionais." Este projeto permitiu realizar pesquisa 
+            científica no ensino básico da educação pública de Alagoas, apesar 
+            das dificuldades cotidianas. A primeira edição da Revista Digital 
+            "Documento Histórico," com <strong>ISBN 978-65-00-73298-6</strong>, é um produto 
+            colaborativo que valoriza a história local e inclui documentos 
+            históricos sobre doenças em Alagoas. Além disso, a revista apresenta 
+            trabalhos interdisciplinares, como o Projeto Penteados Afros, a 
+            elaboração de um censo socioeconômico usando Matemática, Ciência de 
+            Dados e História, e a proposta de redução do aquecimento global por 
+            meio do plantio de árvores geneticamente modificadas.
+          </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="./img/encontrostudantil.png" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <h3>1° LUGAR NO 6° ENCONTRO ESTUDANTIL DE ALAGOAS</h3>
+          <p> 
+            Na 6ª edição do Encontro Estudantil do Estado de Alagoas, nossa Revista 
+            Digital DOCUMENTO HISTÓRICO conquistou o 1º lugar na categoria Arena 
+            Empreendedora. Também exibimos obras de arte na MOSTRA ESTUDANTIL DE 
+            ARTES PLÁSTICAS.
+          </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="https://i.imgur.com/A6uRBYF.png" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <h3>1° LUGAR NO 6° ENCONTRO ESTUDANTIL DE ALAGOAS</h3>
+          <p> 
+            Na 6ª edição do Encontro Estudantil do Estado de Alagoas, nossa Revista 
+            Digital DOCUMENTO HISTÓRICO conquistou o 1º lugar na categoria Arena 
+            Empreendedora. Também exibimos obras de arte na MOSTRA ESTUDANTIL DE 
+            ARTES PLÁSTICAS.
+          </p> 
+        </div>
+
+
+       </div>
       </section>
    </main>
    
