mudanças img para url

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
         <div class="sobre-text-img">
           <figure>
-           <img src="./img/profhistoria.jpeg" alt="Professor willames Santana lider do projeto">
-           <figcaption>Willames Santana mentor e idealizador do projeto.</figcaption>  
+           <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/profhistoria.jpeg?raw=true" alt="Professor willames Santana lider do projeto">
+           <figcaption>foto de Willames Santana mentor e idealizador do projeto.</figcaption>  
           </figure>
           <p>
             A Educação é uma ação coletiva que requer o uso de vários
@@ -100,7 +100,7 @@
 
         <div class="sobre-text-img float">
           <figure>
-            <img src="./img/caparevista.png" alt="Desenho original que foi a capa da primeira edição da revista Documento Históricos">
+            <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/caparevista.png?raw=true" alt="Desenho original que foi a capa da primeira edição da revista Documento Históricos">
             <figcaption>Desenho original que foi a capa da primeira edição da revista Documento Histórico</figcaption>
           </figure>
            <p>
@@ -136,7 +136,7 @@
         <h2>Eventos</h2>
        <div class="boxes-eventos">
         <div class="box-evento">
-          <img src="./img/concursodedesenho.jpeg" alt="Concurso de desenho">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/concursodedesenho.jpeg?raw=true" alt="Concurso de desenho">
           <h3>CONCURSO DE DESENHO "CAROLINA, A MULHER DA CAPA PRETA"</h3>
           <p>
             Em agosto de 2022, o Concurso de Desenho "Carolina, a mulher da 
@@ -151,7 +151,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="./img/capadarevistadigital.png" alt="">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/capadarevistadigital.png?raw=true" alt="capa da primeira edição da revista digital documento historico">
           <h3>A 1ª EDIÇÃO DA REVISTA DIGITAL DOCUMENTO
             HISTÓRICO</h3>
           <p>   
@@ -169,7 +169,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="https://i.imgur.com/A6uRBYF.png" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <img src="" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
           <h3>RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO</h3>
           <p> 
             Durante a 10ª Bienal Internacional do Livro de Alagoas em 2023, foi 
@@ -188,7 +188,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="./img/encontrostudantil.png" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/encontrostudantil.png?raw=true" alt="FOTO DA PREMIAÇÃO DO 1° LUGAR NO 6° ENCONTRO ESTUDANTIL DE ALAGOAS">
           <h3>1° LUGAR NO 6° ENCONTRO ESTUDANTIL DE ALAGOAS</h3>
           <p> 
             Na 6ª edição do Encontro Estudantil do Estado de Alagoas, nossa Revista 
@@ -199,13 +199,18 @@
         </div>
 
         <div class="box-evento">
-          <img src="https://i.imgur.com/A6uRBYF.png" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
-          <h3>1° LUGAR NO 6° ENCONTRO ESTUDANTIL DE ALAGOAS</h3>
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/apresentacaoEncontroProfessores.png?raw=true" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <h3> APRESENTAÇÃO NA GERÊNCIA ITINERANTE 2022.2 ENCONTRO DE PRÁTICAS
+            PEDAGÓGICA: Professores Inspiradores c</h3>
           <p> 
-            Na 6ª edição do Encontro Estudantil do Estado de Alagoas, nossa Revista 
-            Digital DOCUMENTO HISTÓRICO conquistou o 1º lugar na categoria Arena 
-            Empreendedora. Também exibimos obras de arte na MOSTRA ESTUDANTIL DE 
-            ARTES PLÁSTICAS.
+            A participação do Professor Mentor e Coordenador Wi llames de
+            Santana Santos na Gerência Itinerante 2022.2 Encontro de Práticas
+            Pedagógicas: Professores Inspiradores com a apresentação da 1ª Edição da
+            Revista DOCUMENTO HISTÓRICO e da
+            formação do Grupo Científico PHILSA,
+            enfatizando a dinâmica das atividades
+            desenvolvidas pelo grupo dentro e fora
+            da Escola GAP.
           </p> 
         </div>
 
