modificacoes de eventos

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
        <div class="boxes-eventos">
         <div class="box-evento">
           <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/concursodedesenho.jpeg?raw=true" alt="Concurso de desenho">
-          <h3>CONCURSO DE DESENHO "CAROLINA, A MULHER DA CAPA PRETA"</h3>
+          <h3>PRIMEIRO CONCURSO DE DESENHO "CAROLINA, A MULHER DA CAPA PRETA"</h3>
           <p>
             Em agosto de 2022, o Concurso de Desenho "Carolina, a mulher da 
             capa preta" foi realizado com a colaboração do Grêmio Estudantil 
@@ -169,7 +169,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/apresentacaoNaBienal.png?raw=true" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
           <h3>RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO</h3>
           <p> 
             Durante a 10ª Bienal Internacional do Livro de Alagoas em 2023, foi 
@@ -199,9 +199,10 @@
         </div>
 
         <div class="box-evento">
-          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/apresentacaoEncontroProfessores.png?raw=true" alt="RELANÇAMENTO DA REVISTA DIGITAL DOCUMENTO HISTÓRICO NA 10ª BIENAL INTERNACIONAL DO LIVRO">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/apresentacaoEncontroProfessores.png?raw=true" alt="APRESENTAÇÃO NA GERÊNCIA ITINERANTE 2022.2 ENCONTRO DE PRÁTICAS
+          PEDAGÓGICA: Professores Inspiradores">
           <h3> APRESENTAÇÃO NA GERÊNCIA ITINERANTE 2022.2 ENCONTRO DE PRÁTICAS
-            PEDAGÓGICA: Professores Inspiradores c</h3>
+            PEDAGÓGICA: Professores Inspiradores</h3>
           <p> 
             A participação do Professor Mentor e Coordenador Wi llames de
             Santana Santos na Gerência Itinerante 2022.2 Encontro de Práticas
@@ -211,6 +212,17 @@
             enfatizando a dinâmica das atividades
             desenvolvidas pelo grupo dentro e fora
             da Escola GAP.
+          </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="" alt="programa educador transformador">
+          <h3> 2ª ETAPA DA SELEÇÃO DO PRÊMIO EDUCADOR TRANSFORMADOR NACIONAL 2023 </h3>
+          <p> 
+            Inscrita no Prêmio Educador Transformador Nacional 2023, conseguimos
+            avançar para a 2ª etapa da seleção dando mais visibilidade e credibilidade à nossa
+            Revista e ao nosso Grupo Científico PHILSA. O resultado nos deu um feedback de que
+            estamos no caminho certo e a certeza da qualidade científica de nosso trabalho.
           </p> 
         </div>
 
