--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <nav>
       <div class="container nav_container">
-        <a id="logo" href="#home"><i class="fa-solid fa-magnifying-glass"></i><h4>GPHLSA-GAP</h4></a>
+        <a id="logo" href="https://www.instagram.com/gphilsa.gap/"><i class="fa-solid fa-magnifying-glass"></i><h4>GPHLSA-GAP</h4></a>
         <ul class="nav_menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
@@ -100,7 +100,7 @@
 
         <div class="sobre-text-img float">
           <figure>
-            <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/caparevista.png?raw=true" alt="Desenho original que foi a capa da primeira edição da revista Documento Históricos">
+            <img src="" alt="Desenho original que foi a capa da primeira edição da revista Documento Históricos">
             <figcaption>Desenho original que foi a capa da primeira edição da revista Documento Histórico</figcaption>
           </figure>
            <p>
@@ -136,18 +136,18 @@
         <h2>Eventos</h2>
        <div class="boxes-eventos">
         <div class="box-evento">
-          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/concursodedesenho.jpeg?raw=true" alt="Concurso de desenho">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/caparevista.png?raw=true" alt="Concurso de desenho">
           <h3>PRIMEIRO CONCURSO DE DESENHO "CAROLINA, A MULHER DA CAPA PRETA"</h3>
           <p>
-            Em agosto de 2022, o Concurso de Desenho "Carolina, a mulher da 
-            capa preta" foi realizado com a colaboração do Grêmio Estudantil 
-            TecnoGAP. Treze artistas do Ensino Fundamental e Médio submeteram 
-            seus desenhos, avaliados com base na qualidade artística e fidelidade 
-            à lenda urbana. Eduardo da Silva Ritir venceu o concurso, destacando-se 
-            por sua representação detalhada do túmulo de Carolina e da arquitetura 
-            neogótica da Capela do Cemitério N. S. da Piedade. Ele expressou a 
-            surpresa ao descobrir o talento artístico na Escola Guiomar, onde estudou. 
-            O Grupo Científico PHILSA então assumiu o desafio de criar algo novo.</p>
+            Realizado no mês de agosto de 2022 com a colaboração do Grêmio Estudantil TecnoGAP, 
+            o Concurso contou com 13 desenhos de artistas do Ensino Fundamental e do Ensino Médio 
+            entregues à Banca Avaliadora. Com o tema “Carolina, a mulher da capa preta” o concurso 
+            propunha valorizar a História Local e o enaltecimento da História Oral. O critério 
+            avaliativo previsto no Edital foi a qualidade do traço artístico e a “representação 
+            fiel” da lenda urbana. O resultado final foi uma Capa extremamente detalhada com a 
+            representação do túmulo e da fisionomia da Carolina, além da fiel execução na reconstrução 
+            da Arquitetura Eclética com predominância do Neogótico da Capela do Cemitério N. S. da 
+            Piedade.</p>
         </div>
 
         <div class="box-evento">
@@ -216,7 +216,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="" alt="programa educador transformador">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/educatransforma.png?raw=true" alt="programa educador transformador">
           <h3> 2ª ETAPA DA SELEÇÃO DO PRÊMIO EDUCADOR TRANSFORMADOR NACIONAL 2023 </h3>
           <p> 
             Inscrita no Prêmio Educador Transformador Nacional 2023, conseguimos
