--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
         <div class="sobre-text-img float">
           <figure>
-            <img src="" alt="Desenho original que foi a capa da primeira edição da revista Documento Históricos">
-            <figcaption>Desenho original que foi a capa da primeira edição da revista Documento Histórico</figcaption>
+            <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/feiradolivroAlunos.jpeg?raw=true" alt="feira do livro realizado pelo GPHLSA-GAP">
+            <figcaption>Feira do livro realizado pelo GPHLSA-GAP</figcaption>
           </figure>
            <p>
           <strong>O resultado da ação</strong> ultrapassou os objetivos iniciais e o Grupo
@@ -136,18 +136,18 @@
         <h2>Eventos</h2>
        <div class="boxes-eventos">
         <div class="box-evento">
-          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/caparevista.png?raw=true" alt="Concurso de desenho">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/caparevistaa.png?raw=true" alt="Concurso de desenho">
           <h3>PRIMEIRO CONCURSO DE DESENHO "CAROLINA, A MULHER DA CAPA PRETA"</h3>
           <p>
-            Realizado no mês de agosto de 2022 com a colaboração do Grêmio Estudantil TecnoGAP, 
-            o Concurso contou com 13 desenhos de artistas do Ensino Fundamental e do Ensino Médio 
-            entregues à Banca Avaliadora. Com o tema “Carolina, a mulher da capa preta” o concurso 
-            propunha valorizar a História Local e o enaltecimento da História Oral. O critério 
-            avaliativo previsto no Edital foi a qualidade do traço artístico e a “representação 
-            fiel” da lenda urbana. O resultado final foi uma Capa extremamente detalhada com a 
-            representação do túmulo e da fisionomia da Carolina, além da fiel execução na reconstrução 
-            da Arquitetura Eclética com predominância do Neogótico da Capela do Cemitério N. S. da 
-            Piedade.</p>
+            O Concurso realizado em agosto de 2022, com o apoio do Grêmio Estudantil 
+            TecnoGAP, recebeu 13 desenhos de estudantes do Ensino Fundamental e Médio. 
+            Com o tema "Carolina, a mulher da capa preta", o concurso visava valorizar 
+            a História Local e a História Oral, sendo avaliado com base na qualidade 
+            artística e na representação precisa da lenda urbana. O vencedor produziu 
+            uma capa detalhada, representando o túmulo e a figura de Carolina, 
+            além de reconstruir com fidelidade a arquitetura neogótica da Capela 
+            do Cemitério N. S. da Piedade.
+          </p>
         </div>
 
         <div class="box-evento">
@@ -216,7 +216,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/educatransforma.png?raw=true" alt="programa educador transformador">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/educadorAprovado.jpeg?raw=true" alt="programa educador transformador">
           <h3> 2ª ETAPA DA SELEÇÃO DO PRÊMIO EDUCADOR TRANSFORMADOR NACIONAL 2023 </h3>
           <p> 
             Inscrita no Prêmio Educador Transformador Nacional 2023, conseguimos
@@ -225,6 +225,93 @@
             estamos no caminho certo e a certeza da qualidade científica de nosso trabalho.
           </p> 
         </div>
+
+        <div class="box-evento">
+          <img src="" alt="construindo o 2° Dossiê">
+          <h3>CONSTRUÍNDO O 2º DOSSIÊ</h3>
+          <p> 
+            Para o ano de pesquisas de 2023, o Grupo de Científico PHILSA
+            executou um plano de ações de projetos socioeducativos que superou
+            todas as expectativas e envolveu uma rede de contribuidores como o
+            Instituto Mandaver do Banco Laguna
+            (Maceió), o Museu e Instituto Histórico e
+            Geográfico de Alagoas (IHGAL) e o
+            Arquivo Público de Alagoas (APA).
+            Assim, o Grupo de Pesquisa Histórica e
+            Interdisciplinar Luiz Sávio de Almeida,
+            dando sequência ao seu projeto inicial de
+            prestar um Ensino Público de qualidade e
+            criar uma cultura pesquisadora nas Escolas
+            Públicas, lançará em seu segundo ano de
+            existência a 2ª Edição da Revista Digital
+            DOCUMENTO HISTÓRICO – Dossiê:
+            Tributos à Luiz Sávio de Almeida,
+            Moedas Sociais Alagoanas & Projetos
+            Educativos.
+          </p> 
+        </div>
+
+
+        <div class="box-evento">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/concurso2desenho.jpeg?raw=true" alt="O 2º CONCURSO DE DESENHO">
+          <h3>O 2º CONCURSO DE DESENHO</h3>
+          <p> 
+            O Grupo Científico PHILSA promoveu o 2º Concurso de Desenho na 
+            Escola GAP, incentivando os alunos a criar autorretratos da comunidade 
+            Guiomar. O evento tinha duas categorias: uma sobre locais de memória 
+            dos bairros da escola e outra homenageando a professora Guiomar de 
+            Almeida Peixoto. A cerimônia de premiação contou com a presença do 
+            artista Sammy Siqueira e familiares do patrono do Grupo de Pesquisa 
+            GAP, Luiz Sávio de Almeida. Esses concursos não apenas revelaram 
+            talentos, mas também empoderaram os alunos e aumentaram sua confiança 
+            em suas habilidades artísticas.
+           </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/feiradolivro.jpeg?raw=true" alt=" A Iª Feira do Livro">
+          <h3> A Iª Feira do Livro</h3>
+          <p>  
+            A Iª Feira do Livro: Roda de Conversa e Exposição Bibliotecária GAP, 
+            realizada em agosto de 2023, teve como objetivo promover o aprendizado 
+            e a participação dos alunos. Cada aluno apresentou um livro e escreveu 
+            uma resenha crítica, com as melhores resenhas sendo selecionadas para 
+            publicação na 2ª Edição da Revista. Alunos do Ensino Fundamental II e 
+            Médio participaram em diferentes turnos e dias.
+            O evento incluiu oficinas, mesas redondas, exposições de dinheiro, 
+            artes visuais e acervo bibliotecário. Destacam-se as oficinas sobre 
+            moedas locais e educação financeira. Além disso, houve uma eleição 
+            para o Patrono da Biblioteca Escolar, com Dandara dos Palmares sendo 
+            eleita com uma ampla maioria de votos. Assim, a Sala de Leitura GAP 
+            foi renomeada como Biblioteca Escolar GAP Dandara dos Palmares, 
+            resultado de uma escolha democrática e popular pela comunidade escolar.
+          </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/moedas.jpeg?raw=true" alt="EXPOSIÇÃO MUSEOLÓGICA DE DINHEIROS: 
+          CÉDULAS E MOEDAS">
+          <h3>EXPOSIÇÃO MUSEOLÓGICA DE DINHEIROS: 
+            CÉDULAS E MOEDAS</h3>
+          <p> 
+            Para dialogar com as Oficinas de Moedas Sociais realizado na 1ª Grande 
+            FEIRA DO LIVRO, as turmas de Mentoria PROFESSOR MENTOR (1ºA e B) construíram 
+            sob coordenação dos Professores Mentores a EXPOSIÇÃO MUSEOLÓGICA DE DINHEIROS: 
+            CÉDULAS E MOEDAS. Expomos duas Moedas Sociais Alagoanas: BERTHOLET e SURUROTE e 
+            realizamos as oficinas “Bertholet: Moeda e visão Cooperativa com a prof.ª 
+            Luciana Luz” e “Conhecendo o Sururote: uma conversa sobre educação financeira com o 
+            Banco Laguna”.
+          </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="" alt="">
+          <h3> </h3>
+          <p> 
+            
+          </p> 
+        </div>
+
 
 
        </div>
