--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="" alt="construindo o 2° Dossiê">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/pesquisahistoria.jpeg?raw=true" alt="construindo o 2° Dossiê">
           <h3>CONSTRUÍNDO O 2º DOSSIÊ</h3>
           <p> 
             Para o ano de pesquisas de 2023, o Grupo de Científico PHILSA
@@ -250,7 +250,6 @@
             Educativos.
           </p> 
         </div>
-
 
         <div class="box-evento">
           <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/concurso2desenho.jpeg?raw=true" alt="O 2º CONCURSO DE DESENHO">
@@ -303,15 +302,6 @@
             Banco Laguna”.
           </p> 
         </div>
-
-        <div class="box-evento">
-          <img src="" alt="">
-          <h3> </h3>
-          <p> 
-            
-          </p> 
-        </div>
-
 
 
        </div>
