quase concluindo eventos

--- a/index.html
+++ b/index.html
@@ -303,6 +303,29 @@
           </p> 
         </div>
 
+        <div class="box-evento">
+          <img src="" alt="O ACONCHEGO DOS ANCESTRAIS: UMA ESCOLA ANTIRRACISTA">
+          <h3>O ACONCHEGO DOS ANCESTRAIS: UMA ESCOLA ANTIRRACISTA</h3>
+          <p> 
+            Visando proporcionar um Ensino Emancipador, Inclusivo, Antirracista 
+            e de Protagonismo Feminino, o Grupo Científico PHILSA realizou sua 
+            2ª Oficina de Releitura durante a 1ª Grande FEIRA DO LIVRO. Desta 
+            feita, escolhemos a pintura em tela “O Aconchego dos Ancestrais” – 
+            exposta na MOSTRA ESTUDANTIL DE ARTES PLÁSTICAS – que retrata justamente 
+            a Orixá Preta Velha. Feita por Emilly Santos da Silva do 2ºI, a Arte Visual 
+            foi tema da Oficina de Releitura, ficou exposta durante 3 dias na Sala da Coordenação GAP.
+          </p> 
+        </div>
+        <div class="box-evento">
+          <img src="" alt="O PROTAGONISMO FEMININO E AS DUAS CAPAS DA REVISTA DIGITAL DOCUMENTO HISTÓRICO">
+          <h3>O PROTAGONISMO FEMININO E AS DUAS CAPAS DA REVISTA DIGITAL DOCUMENTO HISTÓRICO</h3>
+          <p> 
+            Trabalhando em uma ampla frente de debates, os Eventos PHILSA se mostraram férteis para o 
+            Protagonismo Feminino. Desde os Concursos de Desenho às Capas das Edições. Assim como o 1º 
+            Concurso de Desenho “Carolina, a mulher da capa preta” como o 2º Concurso de Desenho 
+            “Representação da Professora e Diretora Guiomar de Almeida Peixoto” a figura feminina é central.
+          </p> 
+        </div>
 
        </div>
       </section>
