--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="" alt="O ACONCHEGO DOS ANCESTRAIS: UMA ESCOLA ANTIRRACISTA">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/antirascimo.jpeg?raw=true" alt="O ACONCHEGO DOS ANCESTRAIS: UMA ESCOLA ANTIRRACISTA">
           <h3>O ACONCHEGO DOS ANCESTRAIS: UMA ESCOLA ANTIRRACISTA</h3>
           <p> 
             Visando proporcionar um Ensino Emancipador, Inclusivo, Antirracista 
@@ -317,13 +317,26 @@
           </p> 
         </div>
         <div class="box-evento">
-          <img src="" alt="O PROTAGONISMO FEMININO E AS DUAS CAPAS DA REVISTA DIGITAL DOCUMENTO HISTÓRICO">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/guiomar.jpeg?raw=true" alt="O PROTAGONISMO FEMININO E AS DUAS CAPAS DA REVISTA DIGITAL DOCUMENTO HISTÓRICO">
           <h3>O PROTAGONISMO FEMININO E AS DUAS CAPAS DA REVISTA DIGITAL DOCUMENTO HISTÓRICO</h3>
           <p> 
             Trabalhando em uma ampla frente de debates, os Eventos PHILSA se mostraram férteis para o 
             Protagonismo Feminino. Desde os Concursos de Desenho às Capas das Edições. Assim como o 1º 
             Concurso de Desenho “Carolina, a mulher da capa preta” como o 2º Concurso de Desenho 
             “Representação da Professora e Diretora Guiomar de Almeida Peixoto” a figura feminina é central.
+          </p> 
+        </div>
+
+        <div class="box-evento">
+          <img src="" alt="Educação Especial: Artes Visuais como Ação Prática do Desenvolvimento Cognitivo">
+          <h3>Educação Especial: Artes Visuais como Ação Prática do Desenvolvimento Cognitivo</h3>
+          <p> 
+            O grupo de Pesquisa Histórica e Interdisciplinar Luiz Sávio de 
+            Almeida (GPHILSA.GAP) convida o artista alagoano Sammy Siqueira para 
+            o Evento de Abertura do Ganhador da CAPA da 2ª edição da Revista Digital 
+            Documento Histórico, com a honra de ser um dos jurados do concurso de 
+            desenho e para expor parte de seu acervo no pátio para a apreciação 
+            de toda a comunidade escolar.
           </p> 
         </div>
 
