--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </div>
 
         <div class="box-evento">
-          <img src="" alt="Educação Especial: Artes Visuais como Ação Prática do Desenvolvimento Cognitivo">
+          <img src="https://github.com/DomCarlosAdriano/gphlsa-gap/blob/master/.github/esposicaoEspecial.jpeg?raw=true" alt="Educação Especial: Artes Visuais como Ação Prática do Desenvolvimento Cognitivo">
           <h3>Educação Especial: Artes Visuais como Ação Prática do Desenvolvimento Cognitivo</h3>
           <p> 
             O grupo de Pesquisa Histórica e Interdisciplinar Luiz Sávio de 
@@ -343,6 +343,7 @@
        </div>
       </section>
    </main>
+   <footer></footer>
    
    <script src="./script.js"></script>
 </body>
