--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#eventos">Eventos</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="#integrantes">Integrantes</a></li>
+          <li><a href="#revista">Revista</a></li>
+
         </ul>
         <button class="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
         <button class="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
@@ -343,7 +345,20 @@
        </div>
       </section>
    </main>
-   <footer></footer>
+   <footer>
+    <div class="footer-container">
+      <div>
+     <label>Contato:</label>
+    <ul>
+      <li><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do"><i class="fa-regular fa-file"></i>Willames de Santana Santos - Professor Mentor</a></li>
+      <li><a href="https://www.instagram.com/gphilsa.gap/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+      <li><a href="mailto:gphgap@gmail.com"><i class="fa-solid fa-envelope"></i>E-mail: gphgap@gmail.com</a></li>
+    </ul>
+      </div>
+       <img src="" alt="logo do GPHLSA-GAP">
+    </div>
+    <p>© GPHILSA-GAP . 2023 All rigths reserved</p>
+  </footer>
    
    <script src="./script.js"></script>
 </body>
